<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">نوین چک</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">نام کاربری</string>
    <string name="passowrd">رمز ورود</string>
    <string name="login">نوین چک</string>
    <string name="login_button">ورود</string>
    <string name="show_pwd">    نشان دادن رمز عبور</string>
    <string name="hide_pwd">    پنهان کردن رمز عبور</string>
    <string name="forgot">رمز را فراموش کردم</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="add_check">cfsfmls</string>
    <string name="new_check">صدور چک</string>
    <string name="view_checkBook_state">مشاهده دسته چک</string>
    <string name="view_recieved_check">مشاهده چک های دریافتی</string>
    <string name="reminder">یاد آور</string>
    <string name="setting">تنظیمات</string>
    <string name="view_request">مشاهده درخواست ها</string>
    <string name="exit">خروج</string>
    <string name="guid">راهنما</string>
    <string name="add_new_check">صدور چک جدید</string>
    <string name="check_book_state">وضعیت دسته چک</string>
    <string name="previous_page">صفحه قبلی</string>
    <string name="SID">کد فرستنده</string>
    <string name="sign_code">امضا اختصاصی </string>
    <string name="check_amount">مبلغ چک</string>
    <string name="vosoul_date">تاریخ وصول</string>
    <string name="RID">کد گیرنده</string>
    <string name="sending_check_info">ارسال درخواست</string>
    <string name="sodour_date">تاریخ صدور</string>
    <string name="title_activity_view_check_book">ViewCheckBook</string>

</resources>