<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SodourCheckMenu"
    android:background="@color/background_color">



    <LinearLayout
        android:id="@+id/linearFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/sodour_check_jadid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_new_check"
            android:background="@color/white_greyish"
            android:textColor="@color/background_color"

            />

        <Button
            android:id="@+id/check_book_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/check_book_state"
            android:background="@color/white_greyish"
            android:textColor="@color/background_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <Button
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/exit"
            android:background="@color/white_greyish"
            android:textColor="@color/background_color"/>
        <Button

            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/guid"
            android:background="@color/white_greyish"
            android:textColor="@color/background_color"/>
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/previous_page"
            android:background="@color/white_greyish"
            android:textColor="@color/background_color"/>
    </LinearLayout>




</RelativeLayout>